# commander-chess-cpp

./: .firebaserc  .gitignore  CLAUDE.md  CMakeLists.txt  FEEDBACK.md  README.md  commander_chess  commander_chess.cpp  commander_chess.modified.cpp  commander_chess_line_by_line.txt  commander_chess_old  commander_chess_old.cpp  engine (3).cpp  engine.cpp  firebase.json  firestore.rules  run_sim_window.sh
.quack/: active-agents.json
.quack/agent-personalities/: 05d1210a-39c5-4a8a-b183-c2aff1d39ca8.json
backend/: .dockerignore  Dockerfile  README.md  auth.cpp  auth.hpp  commander_chess.cpp  engine.cpp  engine.hpp  engine_api.cpp  engine_api.h  latest_engine_for_gemini.cpp  response_util.hpp  server  server.cpp
docs/: FIREBASE_SETUP_NOTE.md
frontend/public/: about.html  app.157b856ab3e9.js  app.224004c6599d.js  app.25a28ba59c85.js  app.4e4697dc92bd.js  app.6d006bf07e00.js  app.70b141b6ff5a.js  app.74eb067f5c0b.js  app.86ab9a96206f.js  app.8fed6a89df3c.js  app.91c720cab1de.js  app.bfd738aa6f00.js  app.cd201fd4980e.js  app.cec6c090c5c3.js  app.de7cb414e7f2.js  app.e252d4a9c36d.js  app.fbd0c1855646.js  app.js  i18n.auto.js  index.html  manifest.webmanifest  piece_sprites.json  rules.html  sourcecode.html  style.122f8f52c5cb.css  style.1528ea6fa2d8.css  style.16a5367dd32a.css  style.1d5740df140c.css  style.34a6f643d441.css  style.4c9d317ce1bb.css  style.597c2fd7f29e.css  style.683467dc8d30.css  style.68440f84524e.css  style.6d4e7e1c91c1.css  style.7e6e43af5099.css  style.8f0fd265fa89.css  style.92b234e722fc.css  style.99cf69b9b694.css  style.a4301aa04614.css  style.b100291c488a.css  (+6 more)
frontend/public/docs/: Commander_Chess_Rules.docx
frontend/public/engine/: commander_engine.js  commander_engine.wasm  engine_bridge.js  engine_worker.js
frontend/public/js/: firebaseClient.js  rtc.js
web/: build_frontend_assets.sh  build_wasm.sh
